<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exmple_dynamixel_cpp</name>
  <version>0.0.0</version>
  <description>ROS2 node to control Dynamixel XM540-W270-R using Dynamixel Workbench Toolbox</description>

  <maintainer email="yama@example.com">yama</maintainer>
  <author email="yama@example.com">yama</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>dynamixel_workbench_toolbox</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
